2005-03-18  Benoît Dejean  <TazForEver@dlfp.org>

	* src/favorites.c: (remove_all_of_same_name_from_tree),
	(remove_from_blacklist), (is_process_blacklisted),
	(insert_all_of_same_name_from_tree):
	* src/procman.c: (warning_changed_cb), (timeouts_changed_cb),
	(color_changed_cb):
	* src/proctable.c: (get_info), (proctable_search_table):
	* src/proctable.h: Replaced g_strcasecmp by g_ascii_strcasecmp.
	GConf keys are now compared with g_str_equal instead of g_strcasecmp (????).
	
	(proctable_search_table): Marked argument const.

2005-03-18  Benoît Dejean  <TazForEver@dlfp.org>

	* src/memmaps.c: (create_single_memmaps_dialog):
	* src/openfiles.c: (create_single_openfiles_dialog): Fixed strings.

2005-03-18  Benoît Dejean  <TazForEver@dlfp.org>

	* src/memmaps.c: (create_single_memmaps_dialog):
	* src/openfiles.c: (create_single_openfiles_dialog):
	* src/util.c: (_procman_array_gettext_init),
	(mnemonic_safe_process_name),
	(procman_make_label_for_mmaps_or_ofiles):
	* src/util.h: Fixed process name with '_' so that it's not considered
	as a mnemonic.

2005-03-18  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_switch_page): Fixed.

2005-03-17  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_row_selected):
	* src/callbacks.h:
	* src/infoview.c: (expander_get_label), (expander_callback),
	(infoview_create), (infoview_update):
	* src/infoview.h:
	* src/interface.c: (create_proc_view), (create_main_window),
	(do_popup_menu), (update_sensitivity):
	* src/interface.h:
	* src/procman.h:
	* src/proctable.c: (proctable_new): GtkExpander love :)

2005-03-17  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c:
	* src/callbacks.h:
	* src/favorites.c:
	* src/favorites.h:
	* src/infoview.h:
	* src/interface.c:
	* src/interface.h:
	* src/load-graph.h:
	* src/memmaps.c:
	* src/memmaps.h:
	* src/openfiles.c:
	* src/openfiles.h:
	* src/prettytable.c:
	* src/procactions.c:
	* src/procdialogs.c:
	* src/proctable.c:
	* src/util.c: Fixed #includes.
