@@ -1,5 +1,10 @@
 2005-03-18  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/callbacks.c: (get_last_selected), (cb_row_selected):
+	Removed global variable.
+
+2005-03-18  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/favorites.c: (remove_all_of_same_name_from_tree),
 	(remove_from_blacklist), (is_process_blacklisted),
 	(insert_all_of_same_name_from_tree):
